--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="button_send">Send</string>
     <string name="button_acc">Accelerometer values</string>
     <string name="button_comp">Compass</string>
+    <string name="compass_desc">Compass</string>
+    <string name="orientation">Flat</string>
+    <string name="star_desc">Wow</string>
 </resources>
